--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <audio id="audio" loop autoplay> 
-      <source src="%PUBLIC_URL%/sound/love.mp3" type="audio/mpeg">
+      <source src="/love.mp3" type="audio/mpeg">
     </audio>
     <div id="root"></div>
     <!--
